# gladys-feed

./: .gitignore  COPYRIGHT  LICENSE  MOU  README.md  gladys-call-signs  gladys-design-assist  gladys-feed-Artemis II  gladys-telemetry-guardian  pyproject.toml
.github/workflows/: python-tests.yml
dashboard/: app.js  index.html  styles.css
data/feeds/: GH.json  JO.json  LA.json  UY.json  countries.json
docs/: global-energy-live.md
docs/drafts/: call-signs.md  design-assist.md
src/gladys_feed/: __init__.py  callsigns.py  cli.py  design_assist.py  global_energy_live.py
tests/: test_global_energy_live.py
